--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -19,7 +19,19 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.22'
+        go-version: '1.24'
+
+    - name: Install Protobuf Compiler
+      run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
+    - name: Generate Protobuf Go Code
+      run: |
+        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+        export PATH=$PATH:$(go env GOBIN)
+        protoc --go_out=. --go_opt=paths=source_relative \
+               --go-grpc_out=. --go-grpc_opt=paths=source_relative \
+               ./pkg/grpc/auth.proto
 
     - name: Build Server
       run: go build -o cmd/server/server ./cmd/server
