--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -31,7 +31,10 @@ jobs:
         export PATH=$PATH:$(go env GOBIN)
         protoc --go_out=. --go_opt=paths=source_relative \
                --go-grpc_out=. --go-grpc_opt=paths=source_relative \
-               ./pkg/grpc/auth.proto
+               ./pkg/grpc/auth/auth.proto
+
+    - name: Download Go Modules
+      run: go mod tidy
 
     - name: Build Server
       run: go build -o cmd/server/server ./cmd/server
